compiler-core/src/parse/snapshots/gleam_core__parse__tests__parsing_invalid_deprecation_message.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@deprecated(Upname)\nfn wibble() -> Nil\n"
---
----- SOURCE CODE

@deprecated(Upname)
fn wibble() -> Nil


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @deprecated(Upname)
  │ ^^^^^^^^^^^ A deprecation attribute must have a string message.

See: https://tour.gleam.run/functions/deprecations/
